<resources>
    <string name="app_name">TodayLiveQuotes</string>
    <!--    Home Screen-->
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="night_mode">Night Mode</string>
    <string name="recent_notification">Recent Notification</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>