<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/explore"
            android:title="@string/explore"
            android:icon="@drawable/ic_explore"/>
        <item
            android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite"/>
    </group>
    <group
        android:id="@+id/menu_two"
        android:checkableBehavior="single">
        <item
            android:id="@+id/night_mode"
            android:title="@string/night_mode"
            android:icon="@drawable/ic_night_mode"/>
        <item
            android:id="@+id/recent_notification"
            android:title="@string/recent_notification"
            android:icon="@drawable/ic_notifications"/>
    </group>
    <group
        android:id="@+id/menu_three"
        android:checkableBehavior="single">
        <item
            android:id="@+id/rate_us"
            android:title="@string/rate_us"
            android:icon="@drawable/ic_rate"/>
        <item
            android:id="@+id/share_app"
            android:title="@string/share_app"
            android:icon="@drawable/ic_share"/>
        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/ic_contacts"/>
        <item
            android:id="@+id/privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_lock"/>
    </group>
</menu>